added smart text yay

--- a/ethanbrand/text.html
+++ b/ethanbrand/text.html
@@ -9,6 +9,7 @@
 
 <h1 class="titleText" style="color:black;transform: none;top:0;left:0;position:initial">Ethan Brand - Full Text</h1>
 <div class="contentText">
+	<a href="index.html">Back to home</a>
 	<h2 class="libraryH2">Text originally written by Nathaniel Hawthorne</h2>
 	<div class="text">
 
@@ -39,7 +40,7 @@ the merry fellow now. You shall see that there is no harm in him.”
 Bartram and his little son, while they were talking thus, sat watching the same lime-kiln that had
 been the scene of Ethan Brand’s solitary and meditative life, before he began his search for the
 Unpardonable Sin. Many years, as we have seen, had now elapsed, since that portentous night
-when the idea was first developed. The kiln, however, on the mountain-side, stood unimpaired,
+when the idea was first developed. The kiln, however, on the <string class="1">mountain-side,</string> stood unimpaired,
 and was in nothing changed since he had thrown his dark thoughts into the intense glow of its
 furnace, and melted them, as it were, into the one thought that took possession of his life. It was a
 rude, round, tower-like structure about twenty feet high, heavily built of rough stones, and with a
@@ -344,7 +345,7 @@ wasted, absorbed, and perhaps annihilated her soul, in the process.
 “Yes,” murmured he, turning away from the hoary wanderer, “it is no delusion. There is an
 Unpardonable Sin!”
 </section>
-<section id="40">
+<section id="50">
 While these things were passing, a merry scene was going forward in the area of cheerful light,
 beside the spring and before the door of the hut. A number of the youth of the village, young men
 and girls, had hurried up the hillside, impelled by curiosity to see Ethan Brand, the hero of so
@@ -356,7 +357,279 @@ diorama on his back, was passing down the [129] mountain road towards the villag
 party turned aside from it, and, in hopes of eking out the profits of the day, the showman had kept
 them company to the lime-kiln.
 </section>
+<section id="51">
+“Come, old Dutchman,” cried one of the young men, “let us see your pictures, if you can swear
+they are worth looking at!”
+</section>
+<section id="52">
+“O yes, Captain,” answered the Jew,—whether as a matter of courtesy or craft, he styled
+everybody Captain,—“I shall show you, indeed, some very superb pictures!”
+</section>
+<section id="53">
+So, placing his box in a proper position, he invited the young men and girls to look through the
+glass orifices of the machine, and proceeded to exhibit a series of the most outrageous scratchings
+and daubings, as specimens of the fine arts, that ever an itinerant showman had the face to impose
+upon his circle of spectators. The pictures were worn out, moreover, tattered, full of cracks and
+wrinkles, dingy with tobacco smoke, and otherwise in a most pitiable condition. Some purported
+to be cities, public edifices, and ruined castles in Europe; others represented Napoleon’s battles and
+Nelson’s sea fights; and in the midst of these would be seen a gigantic, brown, hairy hand,—which
+might have been mistaken for the Hand of Destiny, though, in truth, it was only the showman’s,—
+pointing its forefinger to various scenes of the conflict, while its owner gave historical illustrations
+</section>
+<section id="54">
+When, with much merriment at its abominable deficiency of merit, the exhibition was concluded,
+the German bade little Joe put his head into the box. Viewed through the magnifying-glasses, the
+boy’s round, rosy visage assumed the strangest imaginable aspect of an immense Titanic child, the
+mouth grinning broadly, and the eyes and every other feature overflowing with fun at the joke.
+Suddenly, however, that merry face turned pale, and its expression changed to horror, for this
+easily impressed and excitable child had become sensible that the eye of Ethan Brand was fixed
+upon him through the glass.
+</section>
+<section id="55">
+“You make the little man to be afraid, Captain,” said the German Jew, turning up the dark and
+strong outline of his visage from his stooping posture. “But look again, and, by chance, I shall
+cause you to see somewhat that is very fine, upon my word!”
+</section>
+<section id="56">
+Ethan Brand gazed into the box for an instant, and then starting back, looked fixedly at the
+German. What had he seen? Nothing, apparently; for a curious youth, who had peeped in almost
+at the same moment, beheld only a vacant space of canvas.
+</section>
+<section id="57">
+“I remember you now,” muttered Ethan Brand to the showman
+</section>
+<section id="58">
+“Ah, Captain,” whispered the Jew of Nuremberg, with a dark smile, “I find it to be a [131] heavy
+matter in my showbox,—this Unpardonable Sin! By my faith, Captain, it has wearied my
+shoulders, this long day, to carry it over the mountain.”
+</section>
+<section id="59">
+“Peace,” answered Ethan Brand sternly, “or get thee into the furnace yonder!”
+</section>
+<section id="60">
+The Jew’s exhibition had scarcely concluded, when a great, elderly dog—who seemed to be his
+own master, as no person in the company laid claim to him—saw fit to render himself the object of
+public notice. Hitherto, he had shown himself a very quiet, well-disposed old dog, going round
+from one to another, and, by way of being sociable, offering his rough head to be patted by any
+kindly hand that would take so much trouble. But now, all of a sudden, this grave and venerable
+quadruped, of his own mere motion, and without the slightest suggestion from anybody else, began
+to run round after his tail, which, to heighten the absurdity of the proceeding, was a great deal
+shorter than it should have been. Never was seen such headlong eagerness in pursuit of an object
+that could not possibly be attained; never was heard such a tremendous outbreak of growling,
+snarling, barking, and snapping,—as if one end of the ridiculous brute’s body were at deadly and
+most unforgivable enmity with the other. Faster and faster, round about went the cur; and faster
+and still faster fled the [132] unapproachable brevity of his tail; and louder and fiercer grew his
+yells of rage and animosity; until, utterly exhausted, and as far from the goal as ever, the foolish old
+dog ceased his performance as suddenly as he had begun it. The next moment he was as mild,
+quiet, sensible, and respectable in his deportment, as when he first scraped acquaintance with the
+company.
+</section>
+<section id="61">
+As may be supposed, the exhibition was greeted with universal laughter, clapping of hands, and
+shouts of encore, to which the canine performer responded by wagging all that there was to wag of
+his tail, but appeared totally unable to repeat his very successful effort to amuse the spectators.
+</section>
+<section id="62">
+Meanwhile, Ethan Brand had resumed his seat upon the log, and moved, it might be, by a
+perception of some remote analogy between his own case and that of this self-pursuing cur, he
+broke into the awful laugh which, more than any other token, expressed the condition of his
+inward being. From that moment, the merriment of the party was at an end; they stood aghast,
+dreading lest the inauspicious sound should be reverberated around the horizon, and that
+mountain would thunder it to mountain, and so the horror be prolonged upon their ears. Then,
+whispering one to another that it was late,—that the moon was almost [133] down,—that the
+August night was growing chill,—they hurried homewards, leaving the lime-burner and little Joe
+to deal as they might with their unwelcome guest. Save for these three human beings, the open
+space on the hillside was a solitude, set in a vast gloom of forest. Beyond that darksome verge, the
+firelight glimmered on the stately trunks and almost black foliage of pines, intermixed with the
+lighter verdure of sapling oaks, maples, and poplars, while here and there lay the gigantic corpses
+of dead trees, decaying on the leaf-strewn soil. And it seemed to little Joe—a timorous and
+imaginative child—that the silent forest was holding its breath until some fearful thing should
+happen.
+</section>
+<section id="63">
+Ethan Brand thrust more wood into the fire, and closed the door of the kiln; then looking over his
+shoulder at the lime-burner and his son, he bade, rather than advised, them to retire to rest.
+</section>
+<section id="64">
+“For myself, I cannot sleep,” said he. “I have matters that it concerns me to meditate upon. I will
+watch the fire, as I used to do in the old time.”
+</section>
+<section id="65">
+“And call the Devil out of the furnace to keep you company, I suppose,” muttered Bartram, who
+had been making intimate acquaintance with the black bottle above mentioned. “But watch, if you
+like, and call as many devils [134] as you like! For my part, I shall be all the better for a snooze.
+Come, Joe !”
+</section>
+<section id="66">
+As the boy followed his father into the hut, he looked back at the wayfarer, and the tears came into
+his eyes, for his tender spirit had an intuition of the bleak and terrible loneliness in which this man
+had enveloped himself.
+</section>
+<section id="67">
+When they had gone, Ethan Brand sat listening to the crackling of the kindled wood, and looking
+at the little spirts of fire that issued through the chinks of the door. These trifles, however, once so
+familiar, had but the slightest hold of his attention, while deep within his mind he was reviewing
+the gradual but marvellous change that had been wrought upon him by the search to which he
+had devoted himself. He remembered how the night dew had fallen upon him,—how the dark
+forest had whispered to him,—how the stars had gleamed upon him—a simple and loving man,
+watching his fire in the years gone by, and ever musing as it burned. He remembered with what
+tenderness, with what love and sympathy for mankind, and what pity for human guilt and woe, he
+had first begun to contemplate those ideas which afterwards became the inspiration of his life; with
+what reverence he had then looked into the heart of man, viewing it as a temple originally divine,
+and, however desecrated, still to be held sacred by a brother; with what awful fear he [135] had
+deprecated the success of his pursuit, and prayed that the Unpardonable Sin might never be
+revealed to him. Then ensued that vast intellectual development, which, in its progress, disturbed
+the counterpoise between his mind and heart. The Idea that possessed his life had operated as a
+means of education; it had gone on cultivating his powers to the highest point of which they were
+susceptible; it had raised him from the level of an unlettered laborer to stand on a star-lit
+eminence, whither the philosophers of the earth, laden with the lore of universities, might vainly
+strive to clamber after him. So much for the intellect! But where was the heart? That, indeed, had
+withered,—had contracted,—had hardened,—had perished! It had ceased to partake of the
+universal throb. He had lost his hold of the magnetic chain of humanity. He was no longer a
+brother-man, opening the chambers or the dungeons of our common nature by the key of holy
+sympathy, which gave him a right to share in all its secrets; he was now a cold observer, looking on
+mankind as the subject of his experiment, and, at length, converting man and woman to be his
+puppets, and pulling the wires that moved them to such degrees of crime as were demanded for his
+study.
+</section>
+<section id="68">
+Thus Ethan Brand became a fiend. He began to be so from the moment that his moral [136]
+nature had ceased to keep the pace of improvement with his intellect. And now, as his highest
+effort and inevitable development,—as the bright and gorgeous flower, and rich, delicious fruit of
+his life’s labor,—he had produced the Unpardonable Sin!
+</section>
+<section id="69">
+“What more have I to seek? what more to achieve?” said Ethan Brand to himself. “My task is
+done, and well done!”
+</section>
+<section id="70">
+Starting from the log with a certain alacrity in his gait and ascending the hillock of earth that was
+raised against the stone circumference of the lime-kiln, he thus reached the top of the structure. It
+was a space of perhaps ten feet across, from edge to edge, presenting a view of the upper surface of
+the immense mass of broken marble with which the kiln was heaped. All these innumerable blocks
+and fragments of marble were red-hot and vividly on fire, sending up great spouts of blue flame,
+which quivered aloft and danced madly, as within a magic circle, and sank and rose again, with
+continual and multitudinous activity. As the lonely man bent forward over this terrible body of fire,
+the blasting heat smote up against his person with a breath that, it might be supposed, would have
+scorched and shrivelled him up in a moment
+</section>
+<section id="71">
+Ethan Brand stood erect, and raised his arms on high. The blue flames played upon his face, and
+imparted the wild and ghastly light which [137] alone could have suited its expression; it was that
+of a fiend on the verge of plunging into his gulf of intensest torment.
+</section>
+<section id="72">
+“O Mother Earth,” cried he, “who art no more my Mother, and into whose bosom this frame shall
+never be resolved! O mankind, whose brotherhood I have cast off, and trampled thy great heart
+beneath my feet! O stars of heaven, that shone on me of old, as if to light me onward and
+upward!—farewell all, and forever. Come, deadly element of Fire,—henceforth my familiar friend!
+Embrace me, as I do thee!”
+</section>
+<section id="73">
+That night the sound of a fearful peal of laughter rolled heavily through the sleep of the limeburner and his little son; dim shapes of horror and anguish haunted their dreams, and seemed still
+present in the rude hovel, when they opened their eyes to the daylight.
+</section>
+<section id="74">
+“Up, boy, up!” cried the lime-burner, staring about him. “Thank Heaven, the night is gone, at last;
+and rather than pass such another, I would watch my lime-kiln, wide awake, for a twelvemonth.
+This Ethan Brand, with his humbug of an Unpardonable Sin, has done me no such mighty favor,
+in taking my place!”
+</section>
+<section id="75">
+He issued from the hut, followed by little Joe, who kept fast hold of his father’s hand. The early
+sunshine was already pouring its gold upon the mountain-tops, and though the valleys [138] were
+still in shadow, they smiled cheerfully in the promise of the bright day that was hastening onward.
+The village, completely shut in by hills, which swelled away gently about it, looked as if it had
+rested peacefully in the hollow of the great hand of Providence. Every dwelling was distinctly
+visible; the little spires of the two churches pointed upwards, and caught a fore-glimmering of
+brightness from the sun-gilt skies upon their gilded weather-cocks. The tavern was astir, and the
+figure of the old, smoke-dried stage agent, cigar in mouth, was seen beneath the stoop. Old
+Graylock was glorified with a golden cloud upon his head. Scattered likewise over the breasts of
+the surrounding mountains, there were heaps of hoary mist, in fantastic shapes, some of them far
+down into the valley, others high up towards the summits, and still others, of the same family of
+mist or cloud, hovering in the gold radiance of the upper atmosphere. Stepping from one to
+another of the clouds that rested on the hills, and thence to the loftier brotherhood that sailed in
+air, it seemed almost as if a mortal man might thus ascend into the heavenly regions. Earth was so
+mingled with sky that it was a day-dream to look at it.
+</section>
+<section id="76">
+To supply that charm of the familiar and homely, which Nature so readily adopts into a scene like
+this, the stage-coach was rattling down [139] the mountain road, and the driver sounded his horn,
+while Echo caught up the notes, and intertwined them into a rich and varied and elaborate
+harmony, of which the original performer could lay claim to little share. The great hills played a
+concert among themselves, each contributing a strain of airy sweetness. Little Joe’s face brightened
+at once.
+</section>
+<section id="77">
+“Dear father,” cried he, skipping cheerily to and fro, “that strange man is gone, and the sky and
+the mountains all seem glad of it!”
+</section>
+<section id="78">
+“Yes,” growled the lime-burner with an oath, “but he has let the fire go down, and no thanks to
+him if five hundred bushels of lime are not spoiled. If I catch the fellow hereabouts again, I shall
+feel like tossing him into the furnace!”
+</section>
+<section id="79">
+With his long <string class="1">pole in his hand</string>, he ascended to the top of the kiln. After a moment’s pause, he
+called to his son.
+</section>
+<section id="80">
+“Come up here, Joe!” said he.
+</section>
+<section id="81">
+So little Joe ran up the hillock, and stood by his father’s side. The marble was all burnt into
+perfect, snow-white lime. But on its surface, in the midst of the circle,—snow-white too, and
+thoroughly converted into lime,—lay a human skeleton, in the attitude of a person who, after long
+toil, lies down to long repose. Within the ribs—strange to say—was the shape of a human heart.
+[140]
+</section>
+<section id="82">
+“Was the fellow’s heart made of marble?” cried Bartram, in some perplexity at this phenomenon.
+“At any rate, it is burnt into what looks like special good lime; and, taking all the bones together,
+my kiln is half a bushel the richer for him.”
+</section>
+<section id="83">
+So saying, the rude lime-burner lifted his pole, and, letting it fall upon the skeleton, the relics of
+Ethan Brand were crumbled into fragments.
+</section>
 	</div>
 </div>
+<div id="snackbar">Text reference request has been <span style="background-color:yellow; color:black">highlighted.</span></div>
+<script>
+	var url = document.location.href
+	var qm = url.split('?')
+	var srs = qm[1]
+	var par = srs.split('$')[0]
+	var lin = srs.split('$')[1]
+	console.log(par)
+	console.log(lin)
+
+	function scroll() {
+		setTimeout(function(){ parent.scrollIntoView({behavior: "smooth", block: "end", inline: "nearest"}); }, 30);
+	}
+
+	if(lin != null) {
+
+		var parent = document.getElementById(par)
+		var line = parent.getElementsByClassName(lin)[0]
+
+		line.style.backgroundColor = "yellow";
+
+		setTimeout(function(){ parent.scrollIntoView({behavior: "smooth", block: "end", inline: "nearest"}); }, 30);
+
+		// Get the snackbar DIV
+		var x = document.getElementById("snackbar");
+
+		// Add the "show" class to DIV
+		x.className = "show";
+
+		// After 3 seconds, remove the show class from DIV
+		setTimeout(function(){ x.className = x.className.replace("show", ""); }, 3000);
+
+
+	} else {
+
+	}
+</script>
 </body>
 </html>
