--- a/ethanbrand/index.html
+++ b/ethanbrand/index.html
@@ -16,7 +16,7 @@
 			<p>
 				<h2 class="libraryH2">The story</h2>
 
-				Ethan brand is a short story written by nathaniel hawthorne in 1850. The main character of Ethan Brand is named Bartram, and is a "lime burner", or someone who smelts limestone into lime. He is visited by his predecessor, the title character Ethan Brand, who is a man with ambiguous morals and who has gone on a long journey to commit the "Unpardonable Sin". Read the entire story <a href="text.html">here</a>
+				<div class="text">Ethan brand is a short story written by nathaniel hawthorne in 1850. The main character of Ethan Brand is named Bartram, and is a "lime burner", or someone who smelts limestone into lime. He is visited by his predecessor, the title character Ethan Brand, who is a man with ambiguous morals and who has gone on a long journey to commit the "Unpardonable Sin". Read the entire story <a href="text.html">here</a></div>
 
 				<h2 class="libraryH2">The project</h2>
 
