--- a/ethanbrand/index.html
+++ b/ethanbrand/index.html
@@ -56,7 +56,7 @@
 					<p>As of the most current plans, There will be 2 environments: the photorealistic, high resolution, high poly lime kiln environment, and a low-poly but huge town scene, situated in a valley upon which lies the lime kiln environment.</p>
 
 					<br><br>
-					<video src="assets/static/env_demo.mp4" controls></video>
+					<center><video src="assets/static/env_demo.mp4" controls></video></center>
 					<br><br>
 					
 					<button type="button" class="collapsible">Lime kiln environment</button>
