--- a/ethanbrand/index.html
+++ b/ethanbrand/index.html
@@ -16,17 +16,21 @@
 			<p>
 				<h2 class="libraryH2">The story</h2>
 
-				<div class="text">Ethan brand is a short story written by nathaniel hawthorne in 1850. The main character of Ethan Brand is named Bartram, and is a "lime burner", or someone who smelts limestone into lime. He is visited by his predecessor, the title character Ethan Brand, who is a man with ambiguous morals and who has gone on a long journey to commit the "Unpardonable Sin". Read the entire story <a href="text.html">here</a></div>
+				<p>Ethan brand is a short story written by nathaniel hawthorne in 1850. The main character of Ethan Brand is named Bartram, and is a "lime burner", or someone who smelts limestone into lime. He is visited by his predecessor, the title character Ethan Brand, who is a man with ambiguous morals and who has gone on a long journey to commit the "Unpardonable Sin". Read the entire story <a href="text.html">here</a></p>
 
 				<h2 class="libraryH2">The project</h2>
 
-				The idea of this animation is to imitate a stunningly high-quality animation with photorealistic and physically based rendered characters and environments. We have set out with Unity's Adam demo reels as a target, and hope to see how far a one-man-army team with a limited budget can achieve
+				<p>The idea of this animation is to imitate a stunningly high-quality animation with photorealistic and physically based rendered characters and environments. We have set out with Unity's Adam demo reels as a target, and hope to see how far a one-man-army team with a limited budget can achieve</p>
 
 				<h2 class="libraryH2">The ToDo's</h2>
 
-				The character pictured above is a low-resolution, very generic character. My next step is to bring the characters into Substance Painter and touch them up, adding higher resolution maps, and more interesting features to the bodies (scars, freckles, etc)
+				<p>The character pictured above is a low-resolution, very generic character. My next step is to bring the characters into Substance Painter and touch them up, adding higher resolution maps, and more interesting features to the bodies (scars, freckles, etc)</p>
 				<br><br>
-				The environment is also in existence, but I am waiting for 2 things to continue it's development: a stronger computer (I am using a laptop with onboard graphics), and a Quixel Indie partnership for high-quality models and textures
+				<p>The environment is also in existence, but I am waiting for 2 things to continue it's development: a stronger computer (I am using a laptop with onboard graphics), and a Quixel Indie partnership for high-quality models and textures</p>
+
+				<h2 class="libraryH2">Previews, recordings, and screenshots</h2>
+
+				<p>Click <a href="prevs.html">here</a> to view screenshots, recordings, early builds, files, and more to come!</p>
 
 				<h2 class="libraryH2">The pipelines</h2>
 
