--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -31,7 +31,7 @@ var temp = 100;
 var fullSrc;
 cont = true
 while(cont == true) {
-	if(imageExists("EB_demo00" + temp + ".mp4")) {
+	if(imageExists("assets/videos/EB_demo00" + temp + ".mp4")) {
 		imgSrc = "EB_demo00" + temp + ".mp4"
 		
     } else {}
