--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -4,6 +4,7 @@
 	<title>Ethan Brand | Full text</title>
 	<link href="assets/style.css" rel="stylesheet">
 	<link href="../static/cdn/jfonts.css" rel="stylesheet">
+	Loading... <br>We are searching for the most up-to-date videos and screenshots for you. This should only take a second!
 </head>
 <body>
 
@@ -33,7 +34,7 @@ cont = true
 while(cont == true) {
 	if(imageExists("assets/videos/EB_demo00" + temp + ".mp4")) {
 		imgSrc = "EB_demo00" + temp + ".mp4"
-		
+		cont = false
     } else {}
 	if(temp==0) {
 		cont = false
