--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -44,6 +44,6 @@ while(cont == true) {
 }
 console.log(imgSrc)
 
-document.getElementById("MRvideo").src = "assets/videos/" + imgSrc + ".mp4"
+document.getElementById("MRvideo").src = "assets/videos/" + imgSrc
 	</script>
 </html>
