--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -42,7 +42,8 @@ while(cont == true) {
 	temp = temp-1
 	console.log("tried " + temp)
 }
-console.log(imgSrc)
+console.clear()
+console.log("Most recent file found: "+imgSrc+"!")
 
 document.getElementById("MRvideo").src = "assets/videos/" + imgSrc
 document.getElementById("clearOnLoad").hidden = true
