--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -13,7 +13,7 @@
 	<a href="index.html">Back to home</a>
 	<div class="text">
 		<h2 class="libraryH2">Most recent recording</h2>
-		<video id="MRvideo" width="100%" controls></video>
+		<video id="MRvideo" width="100%" controls autoplay autobuffer></video>
 	</div>
 	</body>
 	<script>
