--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-<h1 class="titleText" style="color:black;transform: none;top:0;left:0;position:initial">Ethan Brand - Full Text</h1>
+<h1 class="titleText" style="color:black;transform: none;top:0;left:0;position:initial">Ethan Brand - Media</h1>
 <div class="contentText">
 	<a href="index.html">Back to home</a>
 	<div class="text">
