--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -14,7 +14,7 @@
 	<div class="text">
 		<h2 class="libraryH2">Most recent recording</h2>
 		<video id="MRvideo" width="100%" controls autoplay autobuffer></video>
-		<p>This is the most recent version of this video (v <span id="fillMe"></span>). View the full history of our videos over on <a href="https://github.com/jackcrane/jackcrane.github.io/tree/master/ethanbrand/assets/videos">GitHub</a></p>
+		<p style="font-size:10px;">This is the most recent version of this video (v<span id="fillMe"></span>). View the full history of our videos over on <a href="https://github.com/jackcrane/jackcrane.github.io/tree/master/ethanbrand/assets/videos">GitHub</a></p>
 	</div>
 	</body>
 	<script>
