--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -18,5 +18,6 @@
 	<a href="index.html">Back to home</a>
 	<div class="text">
 		<h2 class="libraryH2">Most recent recording</h2>
-		<iframe src="most_recent_vid.html" width="100%" style="border:none;outline:none" frameborder="no" scrolling="no" onload="this.style.height=this.contentDocument.body.scrollHeight +'px';"></iframe>
+		<div id="videoContainer"></div>
+		<iframe src="most_recent_vid.html" width="100%" style="border:none;outline:none" frameborder="no" scrolling="no"></iframe>
 </html>
