--- a/ethanbrand/prevs.html
+++ b/ethanbrand/prevs.html
@@ -19,5 +19,5 @@
 	<div class="text">
 		<h2 class="libraryH2">Most recent recording</h2>
 		<div id="videoContainer"></div>
-		<iframe src="most_recent_vid.html" width="100%" style="border:none;outline:none" frameborder="no" scrolling="no"></iframe>
+		<iframe onload="document.getElementById('clearOnLoad').hidden = true" src="most_recent_vid.html" width="100%" style="border:none;outline:none" frameborder="no" scrolling="no"></iframe>
 </html>
