add new school page

--- a/school/index.html
+++ b/school/index.html
@@ -1,7 +1,16 @@
+<!DOCTYPE html>
 <html>
-<h1>Click a link to see the summary and character lists! </h1><br>
-<h3>Your welcome btw</h3>
-<a href="beowulf.pdf">Beowulf</a><br>
-<a href="canterbury.pdf">Canterbury Tales</a><br>
-<a href="weedthatstrings.pdf">Weed that strings the hangmans bag</a><br>
+<head>
+	<title>School Recources</title>
+	<link href="style.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<div>
+		<h1>Recaps</h1>
+		<a href="beowulf.pdf">Beowulf</a><br>
+		<a href="canterbury.pdf">Canterbury Tales</a><br>
+		<a href="weedthatstrings.pdf">Weed that strings the hangmans bag</a><br>
+	</div>
+</body>
 </html>
