--- a/school/index.html
+++ b/school/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>School Recources</title>
 	<link href="style.css" rel="stylesheet">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="viewport" content="width=device-width, initial-scale=1, minimal-ui">
 </head>
 <body>
 	<div>
