--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,16 +8,17 @@
 <body>
 	<div>
 		<h1>Portfolio</h1>
-		<a href="https://jackcrane.github.io/">My home page</a><br>
-		<a href="https://projectwisp.github.io/">Project Wisp</a><br>
-		<a href="https://jackcrane.github.io/tofly">Aviation Weather</a><br>
-		<a href="https://jackcrane.github.io/salvation">Salvation</a><br>
-		<a href="https://jackcrane.github.io/ethanbrand">Ethan Brand</a><br>
-		<a href="http://scarecrowrow.org/">Scarecrow Row</a><br>
-		<a href="http://fan5fll.github.io/">Fantastic 5</a><br>
-		<a href="http://fan5fll.github.io/7sigmarobotics/">7 Sigma Robotics</a><br>
-		<a href="http://scdrobotics.org">Summit Robotics</a><br>
-		<a href="https://fan5fll.github.io/ftcen/EngineeringNotebook.html">Webapp journal generation</a><br>
+		<a class="a" href="https://jackcrane.github.io/">My home page</a><br>
+		<a class="a" href="https://projectwisp.github.io/">Project Wisp</a><br>
+		<a class="a" href="https://jackcrane.github.io/tofly">Aviation Weather</a><br>
+		<a class="a" href="https://jackcrane.github.io/salvation">Salvation</a><br>
+		<a class="a" href="https://jackcrane.github.io/ethanbrand">Ethan Brand</a><br>
+		<a class="a" href="http://scarecrowrow.org/">Scarecrow Row</a><br>
+		<a class="a" href="http://fan5fll.github.io/">Fantastic 5</a><br>
+		<a class="a" href="http://fan5fll.github.io/7sigmarobotics/">7 Sigma Robotics</a><br>
+		<a class="a" href="http://scdrobotics.org">Summit Robotics</a><br>
+		<a class="a" href="https://fan5fll.github.io/ftcen/EngineeringNotebook.html">Webapp journal generation</a><br>
+		<a class="b" href="https://battleforthenet.com" target="_blank">Sign the petition to protect the internet</a>
 	</div>
 </body>
 </html>
