educated site update

--- a/educated_site/submit.html
+++ b/educated_site/submit.html
@@ -12,13 +12,28 @@
 
 		<div class="main" id="title">
 			<h1>Educated</h1>
-			<h2>The internet is a confusing place</h2>
-			<h2><span>Clear it up</span> with <span>Educated</span></h2>
-			<p>Learn More</p>
-			<center><a href="javascript:pagechange('index')">Back Home</a></center>
+			<h2>Help <span>improve</span> Educated!</h2>
+			<div class="form">
+				<form action="" method="POST">
+					<p><span>What am I about to do?</span> Good question! Educated expands its database of sources based on user input. You are <span>submitting a url to a source and their stance.</span> Educated will update once 10 people submit a source with the same information. If you need it changed sooner, please fill out a <a href="javascript:pagechange('sia')">special interest application</a></p>
+					<p hidden="true" class="warn"><br>Cookies are disabled. Please enable cookies to submit a source <a href="javascript:cookieRsn()">why?</a></p>
+					<input type="text" placeholder="Source URL"><br><br>
+					<select>
+						<option>Select</option>
+						<option value="0">Left wing</option>
+						<option value="1">Leans left</option>
+						<option value="2">Middle-of-the-road</option>
+						<option value="3">Leans right</option>
+						<option value="4">Right wing</option>
+						<option value="7">Unreliable or satirical</option>
+						<option value="8">Up to its users</option>
+						<option value="9">Inconsistent</option>
+					</select>
+				</form>
+			</div>
+			<center><a href="javascript:pagechange('index')">Home</a></center>
 		</div>
 
-		<!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
 		<div class="svgwrapper">
 			<svg viewBox="0 0 1440 1440" overflow="hidden" version="1.1" xmlns="http://www.w3.org/2000/svg">
 			  <path d="M215.8297,1058.225 C216.7629,1053.206 219.8762,1048.023 224.2012,1044.574 C228.5262,1041.125 234.0628,1039.41 238.7858,1039.481 C244.2509,1039.336 250.8256,1041.816 255.353,1046.344 C259.8804,1050.871 262.3606,1057.446 262.2153,1062.911 C262.3606,1068.376 259.8804,1074.951 255.353,1079.478 C250.8256,1084.005 244.2509,1086.486 238.7858,1086.34 C234.0628,1086.412 228.5262,1084.696 224.2012,1081.248 C219.8762,1077.799 216.7629,1072.616 215.8297,1067.597 L9.181476,1067.597 L9.181476,1058.225 z" stroke="#03d1e7" stroke-width="0.75" fill-opacity="0" class="svg-elem-1"></path>
