--- a/educated_site/submit.html
+++ b/educated_site/submit.html
@@ -28,8 +28,9 @@
 						<option value="7">Unreliable or satirical</option>
 						<option value="8">Up to its users</option>
 						<option value="9">Inconsistent</option>
-					</select>
-				</form>
+					</select><br><br>
+					<input type="submit" value="submit">
+				</form><br>
 			</div>
 			<center><a href="javascript:pagechange('index')">Home</a></center>
 		</div>
