update, add button lib

--- a/ovr/index.html
+++ b/ovr/index.html
@@ -19,17 +19,22 @@
 			<div class="index-left">
 				<div class="content">
 					<h1>We Need</h1>
-					<h1 class="light">Ventilators</h1>
-					<a href="" class="btn">Offer Help</a>
+					<h1 class="thin">Ventilators</h1>
+					<a href="" class="btn light">Offer Help</a>
 				</div>
 			</div>
 			<div class="index-right">
 				<div class="content">
 					<h1>We can provide</h1>
-					<h1 class="light">Ventilators</h1>
-					<a href="" class="btn">Ask for help</a>
+					<h1 class="thin">Ventilators</h1>
+					<a href="" class="btn dark">Register Need</a><br>
+					<a href="" class="btn light outline">View Offers</a>
 				</div>
 			</div>
+		</div>
+		
+		<div class="footer">
+			<p>OpenVentilatorRegistry.org is an Open Source project organized by volunteers worldwide. Join the effort on GitHub to contribute.</p>
 		</div>
 	</div>
 </body>
