--- a/educated_site/index.html
+++ b/educated_site/index.html
@@ -17,7 +17,7 @@
 			<p>The world we live in is hugely divided by <span>opposing political ideals and priorities.</span> This tends to come over through our news outlets. Weather or not they are attempting to, most news sources <span>have consistent political ideals</span> which could be either <span>conservative</span>, <span>moderate</span>, or <span>liberal</span>.</p>
 			<h2>Introducing <span>educated</span></h2>
 			<p>A Google Chrome extension that scans through the content being fed to you through the internet. As of now, Educated scans your <span>Google search results</span> and will add a notice to each with a recognizable color theme.</p>
-			<center><a href="javascript:pagechange('submit')">Update our database</a></center>
+			<center><a href="javascript:pagechange('submit.php')">Update our database</a></center>
 		</div>
 
 		<!--?xml version="1.0" encoding="UTF-8" standalone="no"?-->
