--- a/ml/index.html
+++ b/ml/index.html
@@ -9,7 +9,7 @@
     // https://github.com/googlecreativelab/teachablemachine-community/tree/master/libraries/image
 
     // the link to your model provided by Teachable Machine export panel
-    const URL = "https://teachablemachine.withgoogle.com/models/tL0EQnJKm/";
+    const URL = "https://teachablemachine.withgoogle.com/models/8n_BYAot0/";
 
     let model, webcam, labelContainer, maxPredictions;
 
