--- a/ml/index.html
+++ b/ml/index.html
@@ -3,6 +3,9 @@
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
+<div style="width:100px">
+  <div id="maskconf" style="background-color:green;"></div><div id="masklessconf" style="background-color:red;"></div>
+</div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
 <script type="text/javascript">
@@ -54,7 +57,9 @@
             } else {
               maskconf = classPrediction.split(": ")[1]
             }
-            console.log(maskconf);
+            document.getElementById("maskconf").style.width = maskconf*100 + "%"
+            document.getElementById("masklessconf").style.width = masklessconf*100 + "%"
+            console.log(maskconf*100);
         }
     }
 </script>
