--- a/ml/index.html
+++ b/ml/index.html
@@ -4,7 +4,7 @@
 <div id="webcam-container"></div>
 <div id="label-container"></div>
 <div style="width:100px">
-  <div id="maskconf" style="background-color:green;"></div><div id="masklessconf" style="background-color:red;"></div>
+  <div id="maskconf" style="background-color:green;display:inline-block;"></div><div id="masklessconf" style="background-color:red;display:inline-block;"></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
