--- a/ml/index.html
+++ b/ml/index.html
@@ -3,8 +3,8 @@
 <button type="button" onclick="init()">Start</button>
 <div id="webcam-container"></div>
 <div id="label-container"></div>
-<div style="width:100px">
-  <div id="maskconf" style="background-color:green;display:inline-block;"></div><div id="masklessconf" style="background-color:red;display:inline-block;"></div>
+<div style="width:200px;height:20px;">
+  <div id="maskconf" style="background-color:green;display:inline-block;height:20px;"></div><div id="masklessconf" style="background-color:red;display:inline-block;height:20px;"></div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.3.1/dist/tf.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@0.8/dist/teachablemachine-image.min.js"></script>
